# dns-orchestrator

./: .clang-format  .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  SPEC.md  docker-compose.yml
.roo/: settings.local.json
docs/: ARCHITECTURE.md  BUILD_ENVIRONMENT.md  CODE_STANDARDS.md  CUSTOM_THEMES.md  DESIGN.md  TUI_DESIGN.md  openapi.yaml
docs/plans/: 2026-02-28-documentation-restructure-design.md  2026-02-28-phase-3-5-crow-migration.md  2026-02-28-phase-4-authentication.md  2026-02-28-project-framing-design.md  2026-03-01-phase-5-dal-core-repositories.md  2026-03-04-phase-6-powerdns-provider-core-engines.md  2026-03-05-phase-9-web-ui.md  2026-03-06-phase-10-additional-providers.md  2026-03-06-provider-config-database-driven.md  2026-03-07-v0.9.5-design.md  2026-03-07-v0.9.5-implementation.md  2026-03-08-v1.0-design.md  2026-03-09-workstream-3-permissions-restructure.md  SECURITY_PLAN.md
include/api/: ApiServer.hpp  AuthMiddleware.hpp  RouteHelpers.hpp  StaticFileHandler.hpp
include/common/: Config.hpp  Errors.hpp  Logger.hpp  Types.hpp
include/core/: DeploymentEngine.hpp  DiffEngine.hpp  MaintenanceScheduler.hpp  PermissionService.hpp  RollbackEngine.hpp  ThreadPool.hpp  VariableEngine.hpp
include/dal/: ApiKeyRepository.hpp  AuditRepository.hpp  ConnectionPool.hpp  DeploymentRepository.hpp  GroupRepository.hpp  IdpRepository.hpp  ProviderRepository.hpp  RecordRepository.hpp  SessionRepository.hpp  UserRepository.hpp  VariableRepository.hpp  ViewRepository.hpp  ZoneRepository.hpp
include/gitops/: GitOpsMirror.hpp
include/providers/: CloudflareProvider.hpp  DigitalOceanProvider.hpp  IProvider.hpp  PowerDnsProvider.hpp  ProviderFactory.hpp
include/security/: AuthService.hpp  CryptoService.hpp  HmacJwtSigner.hpp  IJwtSigner.hpp  OidcService.hpp  SamlReplayCache.hpp  SamlService.hpp
plans/: SECURITY_PLAN.md
scripts/db/: 001_initial_schema.sql  002_add_indexes.sql
scripts/docker/: entrypoint.sh
src/: CMakeLists.txt  main.cpp
src/api/: ApiServer.cpp  AuthMiddleware.cpp  RouteHelpers.cpp  (+1 more)
tasks/: lessons.md
tests/: CMakeLists.txt  test_main.cpp
tests/integration/: test_api_key_repository.cpp  test_auth_middleware.cpp  test_auth_service.cpp  test_connection_pool.cpp  test_crud_routes.cpp  test_deployment_pipeline.cpp  test_federated_auth.cpp  test_group_repository.cpp  test_idp_repository.cpp  test_provider_repository.cpp  test_record_repository.cpp  test_role_repository.cpp  test_session_repository.cpp  test_user_repository.cpp  test_zone_repository.cpp
tests/unit/: test_cloudflare_provider.cpp  test_config.cpp  test_crypto_service.cpp  test_digitalocean_provider.cpp  test_errors.cpp  test_hmac_jwt_signer.cpp  test_maintenance_scheduler.cpp  test_oidc_service.cpp  test_powerdns_provider.cpp  test_provider_conformance.cpp  test_provider_factory.cpp  test_saml_replay_cache.cpp  test_saml_service.cpp  test_variable_engine.cpp
ui/: index.html  package-lock.json  package.json
(+108 files in other folders)
